2007-07-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add explicit dependencies for moc and uil files.

	* numerous other files:
		Add $Id$ keyword.

2007-07-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Write to log instead of stderr.
		Redirect log to stderr if there is no GUI.

	* src/logoutput.cpp:
		Simplify code, avoid memory allocations.
		Don't prefix each line with a progress indicator.
 
	* src/mpgfile.cpp:
		Write to log instead of stderr.
 
	* src/progresswindow.cpp:
		Let print("") insert a line break.

2007-07-09  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Export all frames in batch mode if there isn't a project file
		(patch by Ralph Glasstetter).

	* src/main.cpp:
		Allow multiple filenames in batch mode.

2007-07-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add copyright and license text.

2007-07-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix generation of required files.

2007-07-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
		Use posix_fadvise in sequential mode.

	* src/main.cpp:
		Use sequential mode when indexing.

	* src/dvbcut.cpp:
		Use sequential mode when indexing or exporting.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Use -Wall.
		Only remove ffmpeg install directories when distcleaning.

	* src/buffer.cpp:
		Disable mmap() on Windows.

	* mingw.sh:
		Use src/Makefile.w32 for everything.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		New file.

	* mingw.sh:
		Set svn:executable property.
		Use src/Makefile.w32.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	Added svn:keyword property for all files except src/*.ui
	(I don't want to confuse Qt designer).

2007-07-04  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp: